docs/refs/script-api/server/1.11.0/blockvolumebase.md
# `BlockVolumeBase`

> 文档版本：1.21.0.24

`BlockVolumeBase`类。script_api.@minecraft/server.blockvolumebase.description

## 方法

/// define
`getCapacity`


///

script_api.@minecraft/server.blockvolumebase.getcapacity.description

```js
getCapacity(): int32
```

/// html | div.result
//// define
返回值：`int32`

- script_api.@minecraft/server.blockvolumebase.getcapacity.return


////

///


/// define
`getMax`


///

script_api.@minecraft/server.blockvolumebase.getmax.description

```js
getMax(): Vector3
```

/// html | div.result
//// define
返回值：[`Vector3`](./vector3.md)

- script_api.@minecraft/server.blockvolumebase.getmax.return


////

///


/// define
`getMin`


///

script_api.@minecraft/server.blockvolumebase.getmin.description

```js
getMin(): Vector3
```

/// html | div.result
//// define
返回值：[`Vector3`](./vector3.md)

- script_api.@minecraft/server.blockvolumebase.getmin.return


////

///


/// define
`getSpan`


///

script_api.@minecraft/server.blockvolumebase.getspan.description

```js
getSpan(): Vector3
```

/// html | div.result
//// define
返回值：[`Vector3`](./vector3.md)

- script_api.@minecraft/server.blockvolumebase.getspan.return


////

///


/// define
`isInside`


///

script_api.@minecraft/server.blockvolumebase.isinside.description

```js
isInside(location: Vector3): boolean
```

/// html | div.result
//// define
`location`：[`Vector3`](./vector3.md)

- script_api.@minecraft/server.blockvolumebase.isinside.location.description


////

//// define
返回值：`boolean`

- script_api.@minecraft/server.blockvolumebase.isinside.return


////

///


/// define
`translate`


///

script_api.@minecraft/server.blockvolumebase.translate.description

```js
translate(delta: Vector3): void
```

/// html | div.result
//// define
`delta`：[`Vector3`](./vector3.md)

- script_api.@minecraft/server.blockvolumebase.translate.delta.description


////

//// define
返回值：`void`

- script_api.@minecraft/server.blockvolumebase.translate.return


////

///

